--- a/chocopy-rs/Cargo.toml
+++ b/chocopy-rs/Cargo.toml
@@ -15,4 +15,4 @@ target-lexicon = "0.10"
 rand = "0.7"
 enum_dispatch = "0.2"
 getopts = "0.2"
-gimli = "0.20"
+gimli = { git = "https://github.com/philipc/gimli.git", branch = "issue-474" }
