Import symbols should be actually UND instead of COM

--- a/chocopy-rs/Cargo.toml
+++ b/chocopy-rs/Cargo.toml
@@ -15,5 +15,5 @@ rand = "0.7"
 enum_dispatch = "0.2"
 getopts = "0.2"
 gimli = "0.20"
-object = { version = "0.18", features = ["write"] }
+object = { git = "https://github.com/gimli-rs/object", features = ["write"] }
 cc = "1.0"
